--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://121.37.168.53/industry?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=true&autoReconnect=true
+spring.datasource.username=industry
+spring.datasource.password=qidongchen
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
