--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,15 @@ spring.datasource.url=jdbc:mysql://121.37.168.53/industry?useUnicode=true&charac
 spring.datasource.username=industry
 spring.datasource.password=qidongchen
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#\u5F00\u542FMybatis\u4E0B\u5212\u7EBF\u547D\u540D\u8F6C\u9A7C\u5CF0\u547D\u540D
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.mapper-locations=classpath:com/example/octopus/dao/*.xml
+
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+
+spring.resources.static-locations=classpath:/static/,
+spring.mvc.static-path-pattern=/static/**
