--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,23 @@
     </dependencies>
 
     <build>
+<!--        <resources>-->
+<!--            <resource>-->
+<!--                <directory>src/main/resources</directory>-->
+<!--                <includes>-->
+
+<!--                    <include>**/*.properties</include>-->
+<!--                    <include>**/*.xml</include>-->
+<!--                    <include>**/*.html</include>-->
+<!--                    <include>static/**</include>-->
+
+<!--                </includes>-->
+<!--                <filtering>false</filtering>-->
+<!--            </resource>-->
+<!--        </resources>-->
+
         <plugins>
+
 
         </plugins>
     </build>
