--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
 
 spring.resources.static-locations=classpath:/static/,
 spring.mvc.static-path-pattern=/static/**
