--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,18 @@ spring.thymeleaf.cache=false
 
 spring.resources.static-locations=classpath:/static/,
 spring.mvc.static-path-pattern=/static/**
+
+
+# datasource config - JDBC-JNI
+
+spring.second-datasource.driver-class-name=com.taosdata.jdbc.rs.RestfulDriver
+spring.second-datasource.url=jdbc:TAOS-RS://192.168.122.1:6041/test?timezone=UTC-8&charset=UTF-8&locale=en_US.UTF-8
+spring.second-datasource.username=root
+spring.second-datasource.password=taosdata
+spring.second-datasource.druid.initial-size=5
+spring.second-datasource.druid.min-idle=5
+spring.second-datasource.druid.max-active=5
+spring.second-datasource.druid.max-wait=30000
+spring.second-datasource.druid.validation-query=select server_status();
+spring.aop.auto=true
+spring.aop.proxy-target-class=true
