--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,12 @@ spring.resources.static-locations=classpath:/static/,
 spring.mvc.static-path-pattern=/static/**
 
 
+# hikari\u6570\u636E\u8FDE\u63A5\u6C60\u8BBE\u7F6E
+spring.datasource.hikari.minimum-idle=3
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.max-lifetime =30000
+spring.datasource.hikari.connection-test-query=SELECT 1
+
 # datasource config - JDBC-JNI
 
 spring.second-datasource.driver-class-name=com.taosdata.jdbc.rs.RestfulDriver
