--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:mysql://121.37.168.53/industry?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=true&autoReconnect=true
+server.port=8080
+
+spring.datasource.url=jdbc:mysql://123.60.32.74/industry?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=true&autoReconnect=true
 spring.datasource.username=industry
-spring.datasource.password=qidongchen
+spring.datasource.password=industry
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #\u5F00\u542FMybatis\u4E0B\u5212\u7EBF\u547D\u540D\u8F6C\u9A7C\u5CF0\u547D\u540D
@@ -23,16 +25,24 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.max-lifetime =30000
 spring.datasource.hikari.connection-test-query=SELECT 1
 
-# datasource config - JDBC-JNI
 
-spring.second-datasource.driver-class-name=com.taosdata.jdbc.rs.RestfulDriver
-spring.second-datasource.url=jdbc:TAOS-RS://192.168.122.1:6041/test?timezone=UTC-8&charset=UTF-8&locale=en_US.UTF-8
-spring.second-datasource.username=root
-spring.second-datasource.password=taosdata
-spring.second-datasource.druid.initial-size=5
-spring.second-datasource.druid.min-idle=5
-spring.second-datasource.druid.max-active=5
-spring.second-datasource.druid.max-wait=30000
-spring.second-datasource.druid.validation-query=select server_status();
 spring.aop.auto=true
 spring.aop.proxy-target-class=true
+
+##mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#
+##Redis \u6570\u636E\u5E93\u7D22\u5F15
+#spring.redis.database=1
+#spring.redis.host=127.0.0.1
+#spring.redis.port=6379
+#spring.redis.password=
+## \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\u91CF
+#spring.redis.pool.max-active=8
+## \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u65F6\u95F4(\u8D1F\u6570\u65E0\u9650\u5236)
+#spring.redis.pool.max-wait=-1
+## \u8FDE\u63A5\u6C60\u4E2D\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
+#spring.redis.pool.max-idle=8
+## \u8FDE\u63A5\u6C60\u4E2D\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
+#spring.redis.pool.min-idle=0
+## \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4ms
+#spring.redis.timeout=5000
