--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
             <version>1.8.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.python</groupId>
+            <artifactId>jython-standalone</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
